--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ayoubreact.github.io/breakingBadApi/",
+  "homepage": "https://ayoubreact.github.io/breakingBad/",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
